fixed mobile view overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -29,4 +29,11 @@ a {
 
 .minor-font-size {
   font-size: .75em;
+  display: none;
+}
+
+@media only screen and (min-width: 1200px) {
+  .minor-font-size {
+    display: block;
+  }
 }
